--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio</title>
 
-</body>
+        <link rel="stylesheet" href="style.css">
+        <script src="state.js"></script>
+    </head>
+    <body data-state="false">
+         <main>
+         </main>
+
+         <!-- TODO:add icons -->
+         <button id="toggle" onclick="toggle()" ></button>
+    </body>
 </html>
