Working nav menu toggle 4.0

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
         <script src="state.js"></script>
     </head>
     <body data-state="false">
-         <main>
-         </main>
 
-         <!-- TODO:add icons -->
-         <button id="toggle" onclick="toggle()" ></button>
+        <main></main>
+
+        <button id="toggle" onclick="toggle()" ></button>
+
+        <nav>
+            <div id="links">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </nav>
+
     </body>
 </html>
