Website new one

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     </head>
     <body data-state="false">
 
-        <main></main>
+        <main>
+            <section>
+                <h1>Quality Shoes</h1>
+                <h1 id="sub">At affordable prices!</h1>
+                
+                <p>
+                    Find your perfect pair without breaking the bank! Welcome to our online shoe emporium, where style meets affordability.
+                    Browse our curated collection of stylish footwear, all priced under 800. From trendy sneakers to elegant heels, we've got your feet covered at prices that won't leave a dent in your wallet.
+                    Step into savings and step out in style with our budget-friendly shoe shop stop!
+                </p>
+            </section>
+        </main>
 
-        <button id="toggle" onclick="toggle()" ></button>
+        <button id="toggle" onclick="toggle()" >Shop</button>
 
         <nav>
             <div id="links">
